--- a/paphosWeatherClouds.ipynb
+++ b/paphosWeatherClouds.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,28 +130,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "isoDate\n",
-       "2000-01-03 00:00:00    {'1h': 0.30000000000000004}\n",
-       "2000-01-03 01:00:00    {'1h': 0.30000000000000004}\n",
-       "2000-01-03 02:00:00                    {'1h': 0.5}\n",
-       "2000-01-03 03:00:00                    {'1h': 0.5}\n",
-       "2000-01-03 04:00:00                    {'1h': 0.5}\n",
-       "                                  ...             \n",
-       "2020-04-25 09:00:00    {'1h': 0.30000000000000004}\n",
-       "2020-04-25 14:00:00                   {'1h': 0.33}\n",
-       "2020-05-03 04:00:00                   {'1h': 0.33}\n",
-       "2020-05-05 09:00:00    {'1h': 0.30000000000000004}\n",
-       "2020-05-24 04:00:00                   {'1h': 0.33}\n",
+       "46        {'1h': 0.30000000000000004}\n",
+       "47        {'1h': 0.30000000000000004}\n",
+       "48                        {'1h': 0.5}\n",
+       "49                        {'1h': 0.5}\n",
+       "50                        {'1h': 0.5}\n",
+       "                     ...             \n",
+       "178086    {'1h': 0.30000000000000004}\n",
+       "178091                   {'1h': 0.33}\n",
+       "178273                   {'1h': 0.33}\n",
+       "178326    {'1h': 0.30000000000000004}\n",
+       "178777                   {'1h': 0.33}\n",
        "Name: rain, Length: 5395, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +181,7 @@
        "Name: clouds, Length: 181464, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +212,7 @@
        "Name: weather, Length: 181464, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,27 +223,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/bk/np4nlklx4vs5wr6lym8k3w8w0000gn/T/ipykernel_1690/2772106319.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  rainy['isoDate']=df['dt'].map(toDate)\n"
+     ]
+    }
+   ],
    "source": [
     "rainy['isoDate']=df['dt'].map(toDate)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['city_name', 'lat', 'lon', 'main', 'wind', 'clouds', 'weather', 'dt',\n",
-       "       'dt_iso', 'timezone', 'rain', 'isoDate'],\n",
+       "       'dt_iso', 'timezone', 'rain', 'dateTime'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +312,7 @@
        "Name: weatherMain, Length: 181464, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +343,7 @@
        "Name: weatherDesc, Length: 181464, dtype: object"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,16 +415,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys([('2000', 12, 'Clear'), ('2000', 12, 'Clouds'), ('2000', 12, 'Rain'), ('2000', 12, 'Thunderstorm'), ('2001', 12, 'Clear'), ('2001', 12, 'Clouds'), ('2001', 12, 'Rain'), ('2001', 12, 'Thunderstorm'), ('2002', 12, 'Clear'), ('2002', 12, 'Clouds'), ('2002', 12, 'Rain'), ('2002', 12, 'Thunderstorm'), ('2003', 12, 'Clear'), ('2003', 12, 'Clouds'), ('2003', 12, 'Rain'), ('2003', 12, 'Thunderstorm'), ('2004', 12, 'Clear'), ('2004', 12, 'Clouds'), ('2004', 12, 'Rain'), ('2004', 12, 'Thunderstorm'), ('2005', 12, 'Clear'), ('2005', 12, 'Clouds'), ('2005', 12, 'Haze'), ('2005', 12, 'Mist'), ('2005', 12, 'Rain'), ('2006', 12, 'Clear'), ('2006', 12, 'Clouds'), ('2006', 12, 'Rain'), ('2006', 12, 'Thunderstorm'), ('2007', 12, 'Clear'), ('2007', 12, 'Clouds'), ('2007', 12, 'Rain'), ('2007', 12, 'Thunderstorm'), ('2008', 12, 'Clear'), ('2008', 12, 'Clouds'), ('2008', 12, 'Rain'), ('2008', 12, 'Thunderstorm'), ('2009', 12, 'Clear'), ('2009', 12, 'Clouds'), ('2009', 12, 'Haze'), ('2009', 12, 'Rain'), ('2009', 12, 'Thunderstorm'), ('2010', 12, 'Clear'), ('2010', 12, 'Clouds'), ('2010', 12, 'Dust'), ('2010', 12, 'Haze'), ('2010', 12, 'Rain'), ('2010', 12, 'Thunderstorm'), ('2010', 12, 'Tornado'), ('2011', 12, 'Clear'), ('2011', 12, 'Clouds'), ('2011', 12, 'Rain'), ('2011', 12, 'Thunderstorm'), ('2012', 12, 'Clear'), ('2012', 12, 'Clouds'), ('2012', 12, 'Rain'), ('2012', 12, 'Thunderstorm'), ('2013', 12, 'Clear'), ('2013', 12, 'Clouds'), ('2013', 12, 'Rain'), ('2013', 12, 'Thunderstorm'), ('2014', 12, 'Clear'), ('2014', 12, 'Clouds'), ('2014', 12, 'Haze'), ('2014', 12, 'Rain'), ('2014', 12, 'Thunderstorm'), ('2015', 12, 'Clear'), ('2015', 12, 'Clouds'), ('2015', 12, 'Rain'), ('2015', 12, 'Thunderstorm'), ('2016', 12, 'Clear'), ('2016', 12, 'Clouds'), ('2016', 12, 'Mist'), ('2016', 12, 'Rain'), ('2016', 12, 'Thunderstorm'), ('2017', 12, 'Clear'), ('2017', 12, 'Clouds'), ('2017', 12, 'Dust'), ('2017', 12, 'Mist'), ('2017', 12, 'Rain'), ('2017', 12, 'Thunderstorm'), ('2018', 12, 'Clear'), ('2018', 12, 'Clouds'), ('2018', 12, 'Rain'), ('2018', 12, 'Thunderstorm'), ('2019', 12, 'Clear'), ('2019', 12, 'Clouds'), ('2019', 12, 'Mist'), ('2019', 12, 'Rain'), ('2019', 12, 'Thunderstorm')])"
+       "dict_keys([(2000, 12, 'Clear'), (2000, 12, 'Clouds'), (2000, 12, 'Rain'), (2000, 12, 'Thunderstorm'), (2001, 12, 'Clear'), (2001, 12, 'Clouds'), (2001, 12, 'Rain'), (2001, 12, 'Thunderstorm'), (2002, 12, 'Clear'), (2002, 12, 'Clouds'), (2002, 12, 'Rain'), (2002, 12, 'Thunderstorm'), (2003, 12, 'Clear'), (2003, 12, 'Clouds'), (2003, 12, 'Rain'), (2003, 12, 'Thunderstorm'), (2004, 12, 'Clear'), (2004, 12, 'Clouds'), (2004, 12, 'Rain'), (2004, 12, 'Thunderstorm'), (2005, 12, 'Clear'), (2005, 12, 'Clouds'), (2005, 12, 'Haze'), (2005, 12, 'Mist'), (2005, 12, 'Rain'), (2006, 12, 'Clear'), (2006, 12, 'Clouds'), (2006, 12, 'Rain'), (2006, 12, 'Thunderstorm'), (2007, 12, 'Clear'), (2007, 12, 'Clouds'), (2007, 12, 'Rain'), (2007, 12, 'Thunderstorm'), (2008, 12, 'Clear'), (2008, 12, 'Clouds'), (2008, 12, 'Rain'), (2008, 12, 'Thunderstorm'), (2009, 12, 'Clear'), (2009, 12, 'Clouds'), (2009, 12, 'Haze'), (2009, 12, 'Rain'), (2009, 12, 'Thunderstorm'), (2010, 12, 'Clear'), (2010, 12, 'Clouds'), (2010, 12, 'Dust'), (2010, 12, 'Haze'), (2010, 12, 'Rain'), (2010, 12, 'Thunderstorm'), (2010, 12, 'Tornado'), (2011, 12, 'Clear'), (2011, 12, 'Clouds'), (2011, 12, 'Rain'), (2011, 12, 'Thunderstorm'), (2012, 12, 'Clear'), (2012, 12, 'Clouds'), (2012, 12, 'Rain'), (2012, 12, 'Thunderstorm'), (2013, 12, 'Clear'), (2013, 12, 'Clouds'), (2013, 12, 'Rain'), (2013, 12, 'Thunderstorm'), (2014, 12, 'Clear'), (2014, 12, 'Clouds'), (2014, 12, 'Haze'), (2014, 12, 'Rain'), (2014, 12, 'Thunderstorm'), (2015, 12, 'Clear'), (2015, 12, 'Clouds'), (2015, 12, 'Rain'), (2015, 12, 'Thunderstorm'), (2016, 12, 'Clear'), (2016, 12, 'Clouds'), (2016, 12, 'Mist'), (2016, 12, 'Rain'), (2016, 12, 'Thunderstorm'), (2017, 12, 'Clear'), (2017, 12, 'Clouds'), (2017, 12, 'Dust'), (2017, 12, 'Mist'), (2017, 12, 'Rain'), (2017, 12, 'Thunderstorm'), (2018, 12, 'Clear'), (2018, 12, 'Clouds'), (2018, 12, 'Rain'), (2018, 12, 'Thunderstorm'), (2019, 12, 'Clear'), (2019, 12, 'Clouds'), (2019, 12, 'Mist'), (2019, 12, 'Rain'), (2019, 12, 'Thunderstorm')])"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -440,10 +452,10 @@
        "181461    2020\n",
        "181462    2020\n",
        "181463    2020\n",
-       "Name: year, Length: 181464, dtype: object"
+       "Name: year, Length: 181464, dtype: int32"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,39 +466,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "this=(df.loc[(df['month'] == 12) & (df['year']==2019)])\n",
-    "pd.set_option('display.max_rows', this.shape[0]+1)\n",
-    "print(this)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "year  month  weatherMain \n",
-       "2019  12     Clear            42\n",
-       "             Clouds          602\n",
-       "             Mist              1\n",
-       "             Rain             48\n",
-       "             Thunderstorm     51\n",
-       "Name: dt, dtype: int64"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "month  weatherMain \n",
+      "1      Clear            1309\n",
+      "       Clouds          12687\n",
+      "       Dust              123\n",
+      "       Fog                 1\n",
+      "       Haze               26\n",
+      "       Mist               18\n",
+      "       Rain             1105\n",
+      "       Squall              3\n",
+      "       Thunderstorm      352\n",
+      "2      Clear            1776\n",
+      "       Clouds          11258\n",
+      "       Dust              158\n",
+      "       Fog                 1\n",
+      "       Haze               62\n",
+      "       Mist               43\n",
+      "       Rain              702\n",
+      "       Squall              4\n",
+      "       Thunderstorm      252\n",
+      "3      Clear            2746\n",
+      "       Clouds          11907\n",
+      "       Dust              284\n",
+      "       Fog                 8\n",
+      "       Haze               67\n",
+      "       Mist               53\n",
+      "       Rain              428\n",
+      "       Thunderstorm      131\n",
+      "4      Clear            3369\n",
+      "       Clouds          10958\n",
+      "       Dust              158\n",
+      "       Fog                14\n",
+      "       Haze              111\n",
+      "       Mist              129\n",
+      "       Rain              296\n",
+      "       Squall              3\n",
+      "       Thunderstorm       82\n",
+      "5      Clear            4505\n",
+      "       Clouds          10440\n",
+      "       Dust               82\n",
+      "       Fog                31\n",
+      "       Haze              132\n",
+      "       Mist              207\n",
+      "       Rain              146\n",
+      "       Thunderstorm       81\n",
+      "6      Clear            5868\n",
+      "       Clouds           8655\n",
+      "       Drizzle             2\n",
+      "       Dust                3\n",
+      "       Fog                34\n",
+      "       Haze              233\n",
+      "       Mist              287\n",
+      "       Rain                9\n",
+      "       Smoke               1\n",
+      "       Thunderstorm       28\n",
+      "7      Clear            6327\n",
+      "       Clouds           8580\n",
+      "       Fog                41\n",
+      "       Haze              369\n",
+      "       Mist              305\n",
+      "       Smoke               1\n",
+      "       Thunderstorm        1\n",
+      "8      Clear            4948\n",
+      "       Clouds           9762\n",
+      "       Dust                1\n",
+      "       Fog                 9\n",
+      "       Haze              378\n",
+      "       Mist              521\n",
+      "       Rain                3\n",
+      "       Thunderstorm        2\n",
+      "9      Clear            4914\n",
+      "       Clouds           9547\n",
+      "       Dust               38\n",
+      "       Fog                 1\n",
+      "       Haze               74\n",
+      "       Mist               36\n",
+      "       Rain               38\n",
+      "       Thunderstorm       38\n",
+      "       Tornado             2\n",
+      "10     Clear            3868\n",
+      "       Clouds          10538\n",
+      "       Dust               48\n",
+      "       Haze               29\n",
+      "       Mist                9\n",
+      "       Rain              117\n",
+      "       Thunderstorm      271\n",
+      "11     Clear            3347\n",
+      "       Clouds          10463\n",
+      "       Dust               18\n",
+      "       Haze                9\n",
+      "       Mist                4\n",
+      "       Rain              250\n",
+      "       Squall              1\n",
+      "       Thunderstorm      307\n",
+      "       Tornado             1\n",
+      "12     Clear            1622\n",
+      "       Clouds          11974\n",
+      "       Dust                9\n",
+      "       Haze               17\n",
+      "       Mist               21\n",
+      "       Rain              752\n",
+      "       Thunderstorm      484\n",
+      "       Tornado             1\n",
+      "Name: dt, dtype: int64\n"
+     ]
     }
    ],
    "source": [
-    "this.groupby(['year','month','weatherMain'])['dt'].count()"
+    "this=df.groupby(['month','weatherMain'])['dt'].count()\n",
+    "pd.set_option('display.max_rows', this.shape[0]+1)\n",
+    "print(this)"
    ]
   },
   {
